<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/usernameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/nameTvText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="44dp"
        android:hint="@string/username_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/usernameTv"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        tools:layout_editor_absoluteX="24dp" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameEt"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/chooseClrTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_2_colors"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/colorRow"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <CheckBox
                android:id="@+id/blueChx"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginHorizontal="5dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/blueClr"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"

                android:contentDescription="@string/blue_clr_chooser"
                app:srcCompat="@color/blue" />

            <CheckBox
                android:id="@+id/redChx"
                android:layout_width="64dp"
                android:layout_height="64dp"

                android:layout_marginHorizontal="5dp" />

            <ImageView
                android:id="@+id/RedClr"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"

                android:layout_marginHorizontal="5dp"

                android:contentDescription="@string/blue_clr_chooser"
                app:srcCompat="@color/red" />

            <CheckBox
                android:id="@+id/yellowChx"
                android:layout_width="64dp"
                android:layout_height="64dp"

                android:layout_marginHorizontal="5dp"

                android:checked="false"
                android:duplicateParentState="false" />

            <ImageView
                android:id="@+id/yellowClr"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"

                android:layout_marginHorizontal="5dp"

                android:contentDescription="@string/blue_clr_chooser"
                app:srcCompat="@color/yellow" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="240dp"
        android:text="@string/mixBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>